--- a/views/guestbook.ejs
+++ b/views/guestbook.ejs
@@ -33,11 +33,8 @@
       <% }) %>
     </tbody>
   </table>
-  <footer class="bg-dark text-white text-center py-4">
-    <p>&copy; 2025 My Company. All rights reserved.</p>
-    <a href="#" class="text-white me-2">Privacy</a>
-    <a href="#" class="text-white">Terms</a>
-</footer>
+  <%- include('partials/footer') %>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76A8fX2PD4o6lzWc5CX8W/7P2XZ+p7zNJbgtZjRli/0hFvNfq5JX2FGdW0sSkFv" crossorigin="anonymous"></script>
 </body>
