--- a/views/guestbook.ejs
+++ b/views/guestbook.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <%- include('partials/head') %>
+  <%- include('Partials/head') %>
   <h1>Guestbook</h1>
   <table border="1" class ="table table-striped table-hover" >
     <thead>
@@ -33,7 +33,7 @@
       <% }) %>
     </tbody>
   </table>
-  <%- include('partials/footer') %>
+  <%- include('Partials/footer') %>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76A8fX2PD4o6lzWc5CX8W/7P2XZ+p7zNJbgtZjRli/0hFvNfq5JX2FGdW0sSkFv" crossorigin="anonymous"></script>
