--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 <body>
 
 <!-- Header -->
-<%- include('partials/head') %>
+<%- include('Partials/head') %>
 
 <!-- Main content -->
 <main class="container my-5">
@@ -62,7 +62,7 @@
 </main>
 
 <!-- Footer -->
-<%- include('partials/footer') %>
+<%- include('Partials/footer') %>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
