--- a/views/ajaxmessage.ejs
+++ b/views/ajaxmessage.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<%- include('partials/head') %>
+<%- include('Partials/head') %>
 
 <main class="container my-5">
     <h2>Leave Ajax Message</h2>
@@ -34,7 +34,7 @@
     <div id="results" class="mt-4"></div>
 </main>
 
-<%- include('partials/footer') %>
+<%- include('Partials/footer') %>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
