--- a/views/newmessage.ejs
+++ b/views/newmessage.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<%- include('partials/head') %>
+<%- include('Partials/head') %>
 
 <main class="container my-5">
     <h2>Leave a Message</h2>
@@ -33,7 +33,7 @@
     </form>
 </main>
 
-<%- include('partials/footer') %>
+<%- include('Partials/footer') %>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
