--- a/Public/styles.css
+++ b/Public/styles.css
@@ -6,14 +6,33 @@ body {
     margin: 0;
 }
 header {
-    display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #1b3f63;
 }
 H1 {
     text-align: center;
 }
-main {
-    flex: 1;
+.navbar-collapse {
+    display: flex !important;
+    flex-basis: auto;
+}
+
+.navbar-nav {
+    flex-direction: row !important;
+}
+
+.navbar-nav .nav-item {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+.navbar-toggler {
+    border: none;
+}
+
+@media (max-width: 991.98px) {
+    .navbar-nav {
+        flex-direction: column !important;
+        width: 100%;
+    }
 }
